--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.37.1"
+    "@playwright/test": "^1.38.1",
+    "allure-commandline": "^2.24.0"
+  },
+  "dependencies": {
+    "allure-playwright": "2.7.0"
   }
 }
